added change password function

--- a/master/templates/services.html
+++ b/master/templates/services.html
@@ -53,8 +53,11 @@
             </div>
 
             <div class="flex items-center gap-4">
+                <a href="/change-password"
+                    class="text-xs text-yellow-400 border border-yellow-500/50 px-2 py-1 rounded hover:bg-yellow-500/10 transition-colors">Change
+                    Password</a>
                 <a href="/logout"
-                    class="text-xs text-red-400 border border-red-500/50 px-2 py-1 rounded hover:bg-red-500/10">Logout</a>
+                    class="text-xs text-red-400 border border-red-500/50 px-2 py-1 rounded hover:bg-red-500/10 transition-colors">Logout</a>
             </div>
         </div>
     </header>
